{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 299,
  "lineage": "ee60d5cc-45bd-1951-fb48-1a5e619d510d",
  "resources": [
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:986363585035:loadbalancer/app/lending-app-backend-alb/e6f9a12552f7ca32",
            "arn_suffix": "app/lending-app-backend-alb/e6f9a12552f7ca32",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "lending-app-backend-alb-1118672836.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:986363585035:loadbalancer/app/lending-app-backend-alb/e6f9a12552f7ca32",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lending-app-backend-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-09782c4e3cea87e09"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00eb97007dc0fe502"
              },
              {
                "subnet_id": "subnet-0dc6f771b2578bb3e"
              }
            ],
            "subnets": [
              "subnet-00eb97007dc0fe502",
              "subnet-0dc6f771b2578bb3e"
            ],
            "tags_all": {
              "app": "lending-app-backend"
            },
            "vpc_id": "vpc-09c59a6aa309722d7",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.ecs.aws_security_group.alb",
            "module.network.aws_eip.eips",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.privates",
            "module.network.aws_route_table_association.publics",
            "module.network.aws_subnet.private_subnets",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:986363585035:listener/app/lending-app-backend-alb/e6f9a12552f7ca32/90ef8be7bb16cbbc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:986363585035:targetgroup/lending-app-backend-lb-tg/a41ef7837a4999b6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:986363585035:listener/app/lending-app-backend-alb/e6f9a12552f7ca32/90ef8be7bb16cbbc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:986363585035:loadbalancer/app/lending-app-backend-alb/e6f9a12552f7ca32",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "app": "lending-app-backend"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_lb.this",
            "module.ecs.aws_lb_target_group.this",
            "module.ecs.aws_security_group.alb",
            "module.network.aws_eip.eips",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.privates",
            "module.network.aws_route_table_association.publics",
            "module.network.aws_subnet.private_subnets",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:986363585035:targetgroup/lending-app-backend-lb-tg/a41ef7837a4999b6",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:986363585035:listener-rule/app/lending-app-backend-alb/e6f9a12552f7ca32/90ef8be7bb16cbbc/0fd5d2066a00c400",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:986363585035:listener-rule/app/lending-app-backend-alb/e6f9a12552f7ca32/90ef8be7bb16cbbc/0fd5d2066a00c400",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:986363585035:listener/app/lending-app-backend-alb/e6f9a12552f7ca32/90ef8be7bb16cbbc",
            "priority": 1,
            "tags": null,
            "tags_all": {
              "app": "lending-app-backend"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_lb.this",
            "module.ecs.aws_lb_listener.http",
            "module.ecs.aws_lb_target_group.this",
            "module.ecs.aws_security_group.alb",
            "module.network.aws_eip.eips",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.privates",
            "module.network.aws_route_table_association.publics",
            "module.network.aws_subnet.private_subnets",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:986363585035:targetgroup/lending-app-backend-lb-tg/a41ef7837a4999b6",
            "arn_suffix": "targetgroup/lending-app-backend-lb-tg/a41ef7837a4999b6",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/docs",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:986363585035:targetgroup/lending-app-backend-lb-tg/a41ef7837a4999b6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "lending-app-backend-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "app": "lending-app-backend"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-09c59a6aa309722d7"
          },
          "dependencies": [
            "module.network.aws_eip.eips",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.privates",
            "module.network.aws_route_table_association.publics",
            "module.network.aws_subnet.private_subnets",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986363585035:security-group/sg-09782c4e3cea87e09",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09782c4e3cea87e09",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lending-app-backend-alb-sg",
            "name_prefix": "",
            "owner_id": "986363585035",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "app": "lending-app-backend"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c59a6aa309722d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.eips",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.privates",
            "module.network.aws_route_table_association.publics",
            "module.network.aws_subnet.private_subnets",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986363585035:security-group/sg-08bb83338df165306",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08bb83338df165306",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09782c4e3cea87e09"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lending-app-backend-ecs-sg",
            "name_prefix": "",
            "owner_id": "986363585035",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "app": "lending-app-backend"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c59a6aa309722d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_security_group.alb",
            "module.network.aws_eip.eips",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.privates",
            "module.network.aws_route_table_association.publics",
            "module.network.aws_subnet.private_subnets",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eips",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b37e428eebec3e62",
            "arn": "arn:aws:ec2:us-east-1:986363585035:elastic-ip/eipalloc-0b37e428eebec3e62",
            "domain": "vpc",
            "id": "eipalloc-0b37e428eebec3e62",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-35-153-164-37.compute-1.amazonaws.com",
            "public_ip": "35.153.164.37",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "app": "lending-app-backend"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-023d0d39edb86e679",
            "arn": "arn:aws:ec2:us-east-1:986363585035:elastic-ip/eipalloc-023d0d39edb86e679",
            "domain": "vpc",
            "id": "eipalloc-023d0d39edb86e679",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-220-59-141.compute-1.amazonaws.com",
            "public_ip": "3.220.59.141",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "app": "lending-app-backend"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986363585035:internet-gateway/igw-0cbd6fbe67f12e3e7",
            "id": "igw-0cbd6fbe67f12e3e7",
            "owner_id": "986363585035",
            "tags_all": {
              "app": "lending-app-backend"
            },
            "vpc_id": "vpc-09c59a6aa309722d7"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b37e428eebec3e62",
            "association_id": "eipassoc-00ed97661ad37cb13",
            "connectivity_type": "public",
            "id": "nat-0208fb931fd51dd42",
            "network_interface_id": "eni-0d19949c2ea9c719d",
            "private_ip": "10.0.1.49",
            "public_ip": "35.153.164.37",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00eb97007dc0fe502",
            "tags_all": {
              "app": "lending-app-backend"
            }
          },
          "dependencies": [
            "module.network.aws_eip.eips",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-023d0d39edb86e679",
            "association_id": "eipassoc-055a27ec38dcb29be",
            "connectivity_type": "public",
            "id": "nat-0994b69c47fe2e085",
            "network_interface_id": "eni-01581bf68f7a020ee",
            "private_ip": "10.0.2.83",
            "public_ip": "3.220.59.141",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0dc6f771b2578bb3e",
            "tags_all": {
              "app": "lending-app-backend"
            }
          },
          "dependencies": [
            "module.network.aws_eip.eips",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986363585035:route-table/rtb-0bc686a7b845f1c0a",
            "id": "rtb-0bc686a7b845f1c0a",
            "owner_id": "986363585035",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0208fb931fd51dd42",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "app": "lending-app-backend"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c59a6aa309722d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.eips",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986363585035:route-table/rtb-08b2e0794ed5e92c0",
            "id": "rtb-08b2e0794ed5e92c0",
            "owner_id": "986363585035",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0994b69c47fe2e085",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "app": "lending-app-backend"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c59a6aa309722d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.eips",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986363585035:route-table/rtb-029aefca8959d8502",
            "id": "rtb-029aefca8959d8502",
            "owner_id": "986363585035",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cbd6fbe67f12e3e7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "app": "lending-app-backend"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c59a6aa309722d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privates",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e12d2f29d10159be",
            "route_table_id": "rtb-0bc686a7b845f1c0a",
            "subnet_id": "subnet-000555fa75e29533a"
          },
          "dependencies": [
            "module.network.aws_eip.eips",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private_subnets",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03cedb43009b7e425",
            "route_table_id": "rtb-08b2e0794ed5e92c0",
            "subnet_id": "subnet-0fc39441b434ff836"
          },
          "dependencies": [
            "module.network.aws_eip.eips",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private_subnets",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publics",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f0edf104f6b4e3cd",
            "route_table_id": "rtb-029aefca8959d8502",
            "subnet_id": "subnet-00eb97007dc0fe502"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083305a89761a9b7a",
            "route_table_id": "rtb-029aefca8959d8502",
            "subnet_id": "subnet-0dc6f771b2578bb3e"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986363585035:subnet/subnet-000555fa75e29533a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-000555fa75e29533a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "986363585035",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "app": "lending-app-backend"
            },
            "vpc_id": "vpc-09c59a6aa309722d7"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986363585035:subnet/subnet-0fc39441b434ff836",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc39441b434ff836",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "986363585035",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "app": "lending-app-backend"
            },
            "vpc_id": "vpc-09c59a6aa309722d7"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986363585035:subnet/subnet-00eb97007dc0fe502",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00eb97007dc0fe502",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "986363585035",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "app": "lending-app-backend"
            },
            "vpc_id": "vpc-09c59a6aa309722d7"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986363585035:subnet/subnet-0dc6f771b2578bb3e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc6f771b2578bb3e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "986363585035",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "app": "lending-app-backend"
            },
            "vpc_id": "vpc-09c59a6aa309722d7"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986363585035:vpc/vpc-09c59a6aa309722d7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-083d4c431d296c8fa",
            "default_route_table_id": "rtb-012403d0f608b02f7",
            "default_security_group_id": "sg-0ab4d1ea404632511",
            "dhcp_options_id": "dopt-581d0a3e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09c59a6aa309722d7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-012403d0f608b02f7",
            "owner_id": "986363585035",
            "tags_all": {
              "app": "lending-app-backend"
            }
          }
        }
      ]
    }
  ]
}